[package]
name = "wgslmarch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.12.0", features = ["derive"] }
futures = "0.3.23"
notify = "4.0.17"
wgpu = { version = "0.14.0", features = ["default", "naga"] }
winit = "0.27.1"
wgpu-subscriber = "0.1.0"
